--- a/src/app/components/parent/parent.component.html
+++ b/src/app/components/parent/parent.component.html
@@ -85,5 +85,6 @@
         <label>Name:</label>
         <input formControlName="name" type="text">
         <app-custom-input formControlName="age"></app-custom-input>
+        <!-- ^^^ -> Custom component -->
         <button [disabled]="!clientForm.get('age')?.touched" type="submit">Submit</button>
     </form>
