--- a/src/app/components/custom-input/custom-input.component.html
+++ b/src/app/components/custom-input/custom-input.component.html
@@ -1,2 +1,2 @@
 <label >Age:</label>
-<input [disabled]="disabled" (blur)="OnTouched()" (change)="OnChange(value)" [(ngModel)]="value" type="text">
+<input [(ngModel)]="value" [disabled]="disabled" (blur)="OnTouched()" (change)="OnChange(value)" type="text">
