--- a/src/app/components/parent/parent.component.scss
+++ b/src/app/components/parent/parent.component.scss
@@ -1,3 +1,11 @@
-.hello1{
-    color: green;
+.centralized-text{
+    text-align: center;
+}
+
+.post-control{
+    width: 500px;
+}
+
+.footer{
+    height: 50px;
 }
